--- a/Assignment - 1/about.html
+++ b/Assignment - 1/about.html
@@ -89,7 +89,7 @@
     <header>
         <div class="container">
             <h1>Sanath Kumar Parimi</h1>
-            <img src="Screenshot 2019-08-16 edx.jpg" alt="Sanath's Photo">
+            <img src="Screenshot%202019-08-16%20edx.jpg.jpg" alt="Sanath's Photo">
         </div>
     </header>
 
