--- a/Assignment - 1/about.html
+++ b/Assignment - 1/about.html
@@ -89,7 +89,7 @@
     <header>
         <div class="container">
             <h1>Sanath Kumar Parimi</h1>
-            <img src="Screenshot%202019-08-16%20edx.jpg.jpg" alt="Sanath's Photo">
+            <img src="image.jpg" alt="Sanath's Photo">
         </div>
     </header>
 
@@ -172,7 +172,7 @@
 
     <!-- Footer Section to navigate to part 2-->
     <footer>
-        <a href="http://54.167.159.237/" class="button" type="button">Take Survey</a>
+        <a href="http://54.210.51.171/" class="button" type="button">Take Survey</a>
     </footer>
 
 </body>
