--- a/Assignment - 1/survey.html
+++ b/Assignment - 1/survey.html
@@ -90,14 +90,14 @@
 
     <!-- Form -->
     <form>
-        <!-- First Name -->
-        <label for="firstName">First Name:</label>
-        <input type="text" id="firstName" name="firstName" required>
-        <br>
-
         <!-- Last Name -->
         <label for="lastName">Last Name:</label>
         <input type="text" id="lastName" name="lastName" required>
+        <br>
+
+        <!-- First Name -->
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" name="firstName" required>
         <br>
 
         <!-- Street Address -->
@@ -121,8 +121,8 @@
         <br>
 
         <!-- Telephone Number -->
-        <label for="telephone">Telephone Number:</label>
-        <input type="tel" id="telephone" name="telephone" required>
+        <label for="mobile">Mobile Number:</label>
+        <input type="tel" id="mobile" name="mobile" required>
         <br>
 
         <!-- Email -->
@@ -146,14 +146,14 @@
         <input type="checkbox" id="campus" name="Campus">
         <label for="campus">Campus</label>
 
-        <input type="checkbox" id="atmosphere" name="Atmosphere">
-        <label for="atmosphere">Atmosphere</label>
+        <input type="checkbox" id="vibe" name="vibe">
+        <label for="vibe">Vibe</label>
 
-        <input type="checkbox" id="dormRooms" name="DormRooms">
-        <label for="dormRooms">Dorm Rooms</label>
+        <input type="checkbox" id="dorms" name="Dorms">
+        <label for="dorms">Dorms</label>
 
-        <input type="checkbox" id="sports" name="Sports">
-        <label for="sports">Sports</label>
+        <input type="checkbox" id="recreation" name="Recreation">
+        <label for="recreation">Recreation</label>
 
         <!-- How did you become interested in the university? -->
         <p>How did you become interested in the university?</p>
