--- a/Assignment - 1/about.html
+++ b/Assignment - 1/about.html
@@ -6,7 +6,7 @@
     <title>Personal Website SWE645</title>
     <style>
         body {
-            font-family: Arial; /* Select the font */
+            font-family: Times New Roman; /* Select the font */
         }
 
         /* Create a container to center the content and limit its width */
@@ -20,7 +20,7 @@
         img {
             width: 150px;
             height: 150px;
-            border-radius: 50%;
+            border-radius: 100%;
             margin: 10px auto;
         }
 
@@ -28,7 +28,7 @@
         .button {
             margin: 0 0 10% 45%; /* Adjust for better positioning */
             padding: 10px 20px;
-            background-color: green;
+            background-color: blue;
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -52,16 +52,19 @@
         /* Add spacing between sections */
         section {
             margin-bottom: 40px;
+
         }
 
         /* Remove default margin from section headings */
         section h2 {
             margin-top: 0;
+            text-decoration: underline;
         }
 
         /* Add space between paragraphs */
         section p {
-            margin-bottom: 5px;
+            margin-bottom: 15px;
+            text-decoration: underline;
         }
 
         /* Define styles for specific content elements */
@@ -111,7 +114,8 @@
                 <p>Kollam, Kerala, India</p>
             </div>
         </section>
-
+    </div>
+    <div class = "container">
         <!-- Experience Section -->
         <section id="experience">
             <h2>Experience</h2>
@@ -139,13 +143,15 @@
                 </ul>
             </div>
         </section>
+    </div>
+    <div class = "container">
 
         <!-- Skills Section -->
         <section id="skills">
             <h2>Skills</h2>
             <div class="skill-category">
                 <h3> Programming Languages</h3>
-                <p>C Programming, C++, JavaScript, Java, Python</p>
+                <p>C, C++, JavaScript, Java, Python</p>
             </div>
             <div class="skill-category">
                 <h3>Web Technologies</h3>
